<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registro de Prospects</string>
    <string name="version">V: 0.8</string>
    <string name="nome">Nome:</string>
    <string name="hnome">Razão Social</string>
    <string name="fantasia">Fantasia:</string>
    <string name="hfantasia">Nome do Fantasia</string>
    <string name="tipopessoa">Tipo Pessoa:</string>
    <string name="tipopessoaf">Física</string>
    <string name="tipopessoaj">Juridica</string>
    <string name="cpf">CPF:</string>
    <string name="hcpf">CPF</string>
    <string name="cnpj">CNPJ:</string>
    <string name="hcnpj">CNPJ</string>
    <string name="ie">Insc. Est:</string>
    <string name="hie">Inscrição Estadual</string>
    <string name="segmento">Segmento:</string>
    <string name="hsegmento">Segmento</string>
    <string name="responsavel">Resp:</string>
    <string name="hresp">Responsável</string>
    
    <string name="endereco">Endereço</string>
     <string name="hendereco">Endereço</string>
	<string name="bairro">Bairro:</string>
	<string name="hbairro">Bairro:</string>
	<string name="cidade">Cidade:</string>
	<string name="hcidade">Cidade:</string>
	<string name="estado">Estado:</string>
	<string name="hestado">UF:</string>
	<string name="cep">CEP:</string>
	<string name="hcep">CEP:</string>
	<string name="complemento">Compl</string>
	<string name="hcomplemento">Compl</string>
	<string name="numero">Número</string>
	<string name="hnumero">Número</string>
    
	<string name="telefone">Telefone</string>
	<string name="htelefone1">Telefone 1</string>
	<string name="htelefone2">Telefone 2</string>
	<string name="celular">Celular</string>
	<string name="hcelular1">Celular 1</string>
	<string name="hcelular2">Celular 2</string>
	<string name="operadora">Operadora</string>
	<string name="hoperadora1">Operadora 1</string>
	<string name="hoperadora2">Operadora 2</string>
	<string name="fax">Fax</string>
	<string name="website">WebSite</string>
	<string name="contato_responsavel">Contato Resp.</string>
	<string name="hcontato_responsavel1">Contato Resp. 1</string>
	<string name="hcontato_responsavel2">Contato Resp. 2</string>
	<string name="hcontato_responsavel3">Contato Resp. 3</string>
	<string name="observacoes">Obs</string>
    <string name="origem">Origem</string>
	
    <string name="email1">Email 1:</string>
    <string name="hemail1">Email Principal</string>
    <string name="email2">Email 2:</string>
    <string name="hemail2">Email Secundário</string>
    <string name="codresp">Cód. Resp. CRM</string>
    <string name="hcodresp">Responsável Resulth</string>
    <string name="enviaemail">Enviar Emails</string>
    <string name="emailimagem">URL Imagem</string>
    <string name="linkimagem">Link de Redirec.</string>
    <string name="assunto">Assunto do Email</string>
    <string name="emailconfig">Configurações de envio do Email</string>
    <string name="emailsmtp">SMTP</string>
    <string name="emailporta">Porta SMTP</string>
    <string name="emailfrom">Email</string>
    <string name="emailusuario">Usuario</string>
    <string name="emailsenha">Senha</string>
    <string name="emailssl">Usa SSL</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="logo_description">ATS Informática</string>
    
    <string name="menuitem_new">Novo cliente</string>
    <string name="menuitem_sett">Configuração</string>
    <string name="menuitem_exp">Exportar para .CSV</string>
    <string name="menuitem_email">Emails pendentes</string>
    <string name="developed">Desenvolvido por:</string>
    <string name="gp">Gregory Pacheco</string>
    <string name="gpemail">gregory@atsinformatica.com.br</string>
    <string name="chr">Daniel Costa</string>
    <string name="chremail">daniel.costa@atsinformatica.com.br</string>
    <string name="atssite">www.atsinformatica.com.br</string>
    <string name="iteminsert_sucess">Novo cliente incluído com sucesso</string>    
    <string name="context_edit">Editar cliente</string>
    <string name="itemedit_sucess">Cliente editado com sucesso</string>    
    <string name="context_delete">Excluir cliente</string>
    <string name="itemdelete_sucess">Cliente excluído com sucesso</string>
    <string name="cancel">Operação cancelada</string>   
    <string name="dialog_title">Atenção</string>
    <string name="dialog_message">Deseja excluir o cliente?</string>
    <string name="dialog_positve">Sim</string>
    <string name="dialog_negative">Não</string>
    <string name="btsalvar">Salvar</string>
    <string name="ctx_send">Enviar email</string>
    <string name="rodape">ATS Informática - 2014</string>

</resources>
