<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Principal$PlaceholderFragment" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/edNome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hnome"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/fantasia" />

            <EditText
                android:id="@+id/edFantasia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hfantasia"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:paddingRight="10dip"
                android:text="@string/tipopessoa" />

            <RadioGroup
                android:id="@+id/rgTipoPessoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rgTipoPessoaF"
                    android:checked="true"
                    android:text="@string/tipopessoaf" />

                <RadioButton
                    android:id="@+id/rgTipoPessoaJ"
                    android:checked="false"
                    android:text="@string/tipopessoaj" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/cpf" />

            <EditText
                android:id="@+id/cpfcnpj"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hcpf"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/ie" />

            <EditText
                android:id="@+id/edInscE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hie"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/segmento" />

            <EditText
                android:id="@+id/edSegmento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hsegmento"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/responsavel" />

            <EditText
                android:id="@+id/edResp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hresp"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>